--- a/module-4/sml-4-badge.qmd
+++ b/module-4/sml-4-badge.qmd
@@ -44,7 +44,7 @@ Part B: Once again, use the institutional library (e.g. [NCSU Library](https://w
 
 For this data product, please add a feature (or several features) *specific to one or more of the activity types* in the OULAD interactions data, and then add these features to your model and evaluate the accuracy. How did the accuracy appreciably change--if at all? Please copy all of your code in one or more code chunks below.
 
-*Reach*: Consider changing your model from a random forest to a [boosted tree](https://parsnip.tidymodels.org/reference/boost_tree.html), which can be even more performant (in terms of predictions) than random forests.
+*Reach*: Consider changing your model from a [boosted tree](https://parsnip.tidymodels.org/reference/boost_tree.html) to a neural network, which can be even more performant.
 
 ```{r}
 
