little edits based on feedback

--- a/module-1/sml-1-code-along.qmd
+++ b/module-1/sml-1-code-along.qmd
@@ -188,7 +188,7 @@ library(tidymodels)
 #| eval: false
 
 pokemon_recipe <- recipe(early_gen ~ height_m + weight_kg + hp, 
-                         data = train) %>% 
+                         data = pokemon) %>% 
     step_mutate(early_gen = as.factor(early_gen))
 ```
 
